# TOEIC_Quiz_Generator

./: .gitignore  README.md  pyproject.toml  setup_and_start.bat
backend/: __init__.py  database.py  main.py  models.py  schemas.py
backend/ai_clients/: ai_client_base.py  ai_client_factory.py  config.py  exceptions.py  gemini_client.py  gemini_imagen_client.py  gemini_tts_client.py  logger.py
backend/prompt_engine/: README.md  __init__.py  explanation_prompts.py  listening_prompts.py  prompt_manager.py  reading_prompts.py  toeic_response_schemas.py  toeic_topics.py
backend/routers/: listening.py  reading.py
backend/utils/: coco_caption_loader.py  pdf_generator.py
frontend/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: MarkdownRenderer.vue  NavBar.vue  SharedExplanationCard.vue  UnifiedTestSidebar.vue
frontend/src/composables/: useExportImport.ts  useToast.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: settings.ts
frontend/src/types/: explanations.ts  index.ts
frontend/src/utils/: testHistory.ts
frontend/src/views/: FullTestView.vue  QuizView.vue  SettingsView.vue
prompts/: part1_vision.md  part2_qa.md  part3_conversation.md  part4_talk.md  part5_sentence.md  part6_paragraph.md  part7_multiple.md  part7_single.md
